--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.15.0"
   }
 }
